securitygroup.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "SecurityGroups",
  "Resources": {
    "SSHandTCPPublicTraffic":{
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow HTTP and SSH traffic from Internet",
        "VpcId": {"Ref" : "myVPC"},
        "SecurityGroupIngress": [
		{
          "IpProtocol": "tcp",
          "FromPort": "80",
          "ToPort": "80",
          "CidrIp": "0.0.0.0/0"
        },
		{
          "IpProtocol": "tcp",
          "FromPort": "22",
          "ToPort": "22",
          "CidrIp": "0.0.0.0/0"
		}
		]
      }
    },
    "SSHPrivateTraffic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Allow SSH from Public Subnet",
        "VpcId" : {"Ref" : "myVPC"},
        "SecurityGroupIngress": [{
          "IpProtocol": "tcp",
          "FromPort": "22",
          "ToPort": "22",
          "CidrIp": "10.1.1.0/24"
        }]
      }
    },
    "myVPC":{
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock":"10.1.0.0/16"
      }
    },
    "PublicSubnet":{
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref" : "myVPC"},
        "CidrBlock": "10.1.1.0/24"
      }
    },
    "PrivateSubnet":{
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref" : "myVPC"},
        "CidrBlock": "10.1.2.0/24"
      }
    }
  }
}
